--- a/index.html
+++ b/index.html
@@ -4,10 +4,42 @@
 <head>
     <meta charset="utf-8">
     <title>guild</title>
+    <link rel="stylesheet" href="css/style.css"></style>
 </head>
 
-<body style="background-image:url('https://images.unsplash.com/photo-1433740944490-b669cb8b1c44?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2710&q=80')">
-
+<body>
+  <div id="particle-container">
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  	<div class="particle"></div>
+  </div>
 
 
 </body>
