--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
       <div class="line"></div>
     </div>
     <div class="right-column">
-      <a id="menu-item" href="#"><h2>The Workshop</h2></a>
+      <a id="menu-item" href="#"><h2>About Guilds</h2></a>
       <hr>
       <a id="menu-item" href="#"><h2>The Manual</h2></a>
       <hr>
-      <a id="menu-item" href="#"><h2>The Ongoing Effort</h2></a>
+      <a id="menu-item" href="#"><h2>The Workshop</h2></a>
       <hr>
-      <a id="menu-item" href="#"><h2>The Reason</h2></a>
+      <a id="menu-item" href="#"><h2>The Ongoing Effort</h2></a>
 
     </div>
 
   </div>
-  
+
   <script src="js/script.js"></script>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/three.r119.min.js"></script>
