Website for Final

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title>guild</title>
   <link rel="stylesheet" href="css/style.css">
-  </style>
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
@@ -23,11 +22,11 @@
       <div class="line"></div>
     </div>
     <div class="right-column">
-      <a id="menu-item" href="#"><h2>About Guilds</h2></a>
+      <a id="menu-item" href="about.html"><h2>About Guilds</h2></a>
       <hr>
       <a id="menu-item" href="#"><h2>The Manual</h2></a>
       <hr>
-      <a id="menu-item" href="#"><h2>The Workshop</h2></a>
+      <a id="menu-item" href="workshop.html"><h2>The Workshop</h2></a>
       <hr>
       <a id="menu-item" href="#"><h2>The Ongoing Effort</h2></a>
 
